<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/your_location_phrase"/>

        <Button
            android:id="@+id/location_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/blue_1"
            android:text="@string/location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/choose_location_phrase"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:background="@color/blue_1"
                android:popupBackground="@color/yellow_1"/>
            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/blue_1"
                android:popupBackground="@color/yellow_1"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/apply"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weather_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/city_default"
                android:textColor="@color/blue_2"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/time_default"
                android:textColor="@color/blue_2"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/today_icon"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:contentDescription="@string/icon_discription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/today"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>
                <TextView
                    android:id="@+id/today_temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_temp"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tomorrow"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>
                <TextView
                    android:id="@+id/tomorrow_temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_temp"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/two_days"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>
                <TextView
                    android:id="@+id/two_days_temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_temp"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/three_days_later"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>
                <TextView
                    android:id="@+id/three_days_temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_temp"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/four_days"
                    android:textSize="20sp"
                    android:layout_marginEnd="40dp"/>
                <TextView
                    android:id="@+id/four_days_temp_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_temp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/blue_2"/>
    </FrameLayout>
</LinearLayout>